--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.20.4",
+		"@testing-library/svelte": "^4.0.3",
 		"@types/cookie": "^0.5.1",
+		"@types/jsdom": "^21.1.1",
 		"@types/peerjs": "^1.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -30,6 +32,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"gh-pages": "^5.0.0",
+		"jsdom": "^22.1.0",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -40,7 +43,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
-		"vitest": "^0.32.2"
+		"vitest": "^0.33.0"
 	},
 	"type": "module",
 	"dependencies": {
