--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
 		"gh-pages": "^5.0.0",
 		"jsdom": "^22.1.0",
 		"postcss": "^8.4.24",
-		"prettier": "^2.8.0",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.4.0",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"svelte-hero-icons": "^5.0.0",
@@ -47,10 +48,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@popperjs/core": "^2.11.8",
-		"flowbite": "^1.7.0",
-		"flowbite-svelte": "^0.39.2",
-		"peerjs": "^1.4.7",
-		"tailwind-merge": "^1.13.2"
+		"peerjs": "^1.4.7"
 	}
 }
